test/invalid/NoLocalVariables/NoLocalVariables.plume
/**
 * @author Robin Burgess 36815
 */
 class NoLocalVariables extends Object is
	field variable : Integer
	method main : () -> String is
		Integer alpha = 0
		alpha